tests/src/frontend/typechecking/invalid/function_pattern_matching_1.sk
class X() {
  fun test(): void
  | X() -> void
}
